api: search layer implementation
