# csServerComp/ServerComponents/api/RestAPI.ts
@@ -19,6 +19,7 @@ export class RestAPI extends BaseConnector.BaseConnector {
     public layersUrl;
     public keysUrl;
     public filesUrl;
+    public searchUrl;
     public projectsUrl;
 
     constructor(public server: express.Express, public baseUrl: string = "/api") {
@@ -26,6 +27,7 @@ export class RestAPI extends BaseConnector.BaseConnector {
         this.isInterface = true;
         this.resourceUrl = baseUrl + "/resources/";
         this.layersUrl = baseUrl + "/layers/";
+        this.searchUrl = baseUrl + "/search/";
         this.filesUrl = baseUrl + "/files/";
         this.keysUrl = baseUrl + "/keys/";
         this.projectsUrl = baseUrl + "/projects/";
@@ -229,6 +231,14 @@ export class RestAPI extends BaseConnector.BaseConnector {
                 res.send(result);
             });
         });
+
+        this.server.get(this.searchUrl + ":keyword", (req: express.Request, res: express.Response) => {
+            this.manager.searchLayers(req.params.keyword, [], <ApiMeta>{ source: 'rest' }, (result: CallbackResult) => {
+                //todo: check error
+                res.send(result);
+            });
+        }
+            )
 
         // LOGS
 
